# word-guesser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: words.txt
include/: App.hpp  Global.hpp
include/common/: PCH.hpp
source/: App.cpp  main.cpp
